# ChangeLog for net-libs/ldns
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Jul 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -ldns-1.5.1.ebuild, +ldns-1.6.0.ebuild:
  version bump

  10 Feb 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -ldns-1.5.0.ebuild, +ldns-1.5.1.ebuild:
  bugfix release, version bump

  09 Feb 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -ldns-1.4.1.ebuild, +ldns-1.5.0.ebuild:
  version bump

  19 Jan 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
  ldns-1.4.1.ebuild:
  Add suggested RDEPEND=${DEPEND}.

  28 Dec 2008; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -ldns-1.4.0.ebuild, +ldns-1.4.1.ebuild:
  version bump

  20 Nov 2008; Tom Hendrikx (whyscream) <tom@whyscream.net> Manifest:
  Fixed digests

  20 Nov 2008; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -ldns-1.3.0.ebuild, +ldns-1.4.0.ebuild:
  version bump, moved utilities to new ebuild

  02 Sep 2008; Tom Hendrikx (whyscream) <tom@whyscream.net>
  +ldns-1.3.0.ebuild, +metadata.xml:
  New ebuild for net-libs/ldns, see bug #192728
