@@ -1,4 +1,4 @@
-DIST ldns-1.6.0.tar.gz 824644 RMD160 c97623cee576db21909728208dc952070912c7fa SHA1 e5fdbc5cd66f6afc4f816e9acd334bddc488e830 SHA256 ff14a5a52c61ec3212b3e35fdd9f0861705a66fceb1cef8bd4720b950b5694e7
-EBUILD ldns-1.6.0.ebuild 803 RMD160 721f88789e0c0eff600ac41d3fb81243a1adda53 SHA1 5c9640821950f5f06c3621374515cc1a64e74038 SHA256 6952ab47f487260652b8984de5f962eb40c600c592386ed20104a0df8bec62d7
-MISC ChangeLog 1103 RMD160 5703bca94b1d4540e35124a2982946029c2de4ad SHA1 7a34ce7ab7dfbf08581f8417f4680f817b926ee0 SHA256 7494203c1227d86d19fba7d35dfcc45f0c3a90ccdbf94f4c29a69da955d66a08
-MISC metadata.xml 186 RMD160 790ef987bc75afa86a9fc3f6ae421a7e567e4196 SHA1 35a3a41913911438fcbcee814f9a0c416167e731 SHA256 6ac7e74060d4e767e3d642291eb1a38630e188ce34456b48a70562cbd560f17c
+DIST ldns-1.6.1.tar.gz 830714 RMD160 c477c76308b56bd18920ea0deeac286857c93e22 SHA1 625ad56970ebf91ae91af2fbb92b048164717df1 SHA256 c30a4791dbfb0dc31c58e24a25c594f534cdef24013b1945b6713aedd17fe100
+EBUILD ldns-1.6.1.ebuild 1274 RMD160 e05ed247d238e0e4f78d62049e2529292f853e38 SHA1 d0f12d6be3ab6fcb2a2395f7e49ecb41695a1304 SHA256 cb6f716c25d4d122ccc086699a46326168731e1c5b178595c443621164f26c9b
+MISC ChangeLog 1235 RMD160 aa58f59d3e59b8d77657f37e51e21b3eafddf09c SHA1 aec7308256476ec31c55bc6f5ea5e9811783a029 SHA256 767a1e181bca440aeed32a20551e60014e97cd8b8bd3a65a06380812b50deb2a
+MISC metadata.xml 252 RMD160 f3d9b7ddbf87a3c8c4961893d7cf12bb42e46513 SHA1 43a32dbbafc20d555b881f731605d60d0cb0e1f4 SHA256 1592924ba2d4ecdcdbcc5c277cd0537e12c7f210dfc3ef9a323f9283d507fb04
