@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Aug 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
+  -ldns-1.6.0.ebuild, +ldns-1.6.1.ebuild, metadata.xml:
+  version bump
+
   09 Jul 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
   -ldns-1.5.1.ebuild, +ldns-1.6.0.ebuild:
   version bump
